adding enpoints to swagger
